test_cases/CUSTOMmeta3/funky_assigns.out
Line 5, column 5: unterminated string literal
Line 6, column 5: unterminated string literal
Line 9, column 5: syntax error: "adeus"
