test_cases/CUSTOMmeta3/funky_assigns.dgo
package main;


func main() {
    "ola
    " = 13;


    "adeus" = 1;
}